# dagster-code-boilerplate

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/data_pipeline/: __init__.py
src/data_pipeline/assets/: hello_world.py
